# decode

./: Cargo.toml  memory.x  readme.md
src/: main.rs
